# k8s-ml-predictive-autoscaling

./: .flake8  .gitignore  .pre-commit-config.yaml  Contributing.md  LICENSE  README.md  ROADMAP.md  RUN.md  Readme.md  TODO.md  collect-and-process-data.sh  pyproject.toml  start-data-collection.sh
.github/workflows/: ci.yml
data/processed_synthetic_backup/: scaler.pkl  sequences_test.npz  sequences_train.npz  sequences_validation.npz  test.csv  validation.csv
data/raw_alibaba/: active_jobs_20180101.csv  active_jobs_20180102.csv  active_jobs_20180103.csv  active_jobs_20180104.csv  active_jobs_20180105.csv  active_jobs_20180106.csv  active_jobs_20180107.csv  active_jobs_20180108.csv  latency_p50_20180101.csv  latency_p50_20180102.csv  latency_p50_20180103.csv  latency_p50_20180104.csv  latency_p50_20180105.csv  latency_p50_20180106.csv  latency_p50_20180107.csv  latency_p50_20180108.csv  latency_p95_20180101.csv  latency_p95_20180102.csv  latency_p95_20180103.csv  latency_p95_20180104.csv  latency_p95_20180105.csv  latency_p95_20180106.csv  latency_p95_20180107.csv  latency_p95_20180108.csv  latency_p99_20180101.csv  latency_p99_20180102.csv  latency_p99_20180103.csv  latency_p99_20180104.csv  latency_p99_20180105.csv  latency_p99_20180106.csv  latency_p99_20180107.csv  latency_p99_20180108.csv  request_rate_20180101.csv  request_rate_20180102.csv  request_rate_20180103.csv  request_rate_20180104.csv  request_rate_20180105.csv  request_rate_20180106.csv  request_rate_20180107.csv  request_rate_20180108.csv
docker/: Dockerfile.demo-service  docker-compose.yml
docs/: eda-report.md  model-comparison-table.csv  setup-guide.md
k8s/: kind-config.yaml
notebooks/: research-data.ipynb
scripts/: check_raw_patterns.py  convert_datasets.py  convert_real_datasets.py  download_datasets.py  eda_analysis.py
tests/: __init__.py  conftest.py  test_demo_service.py  test_load_generator.py  test_synthetic_patterns.py
tools/: __init__.py
(+195 files in other folders)
