[tool.poetry]
name = "k8s-ml-predictive-autoscaling"
version = "0.1.0"
description = "Predictive autoscaling research environment for Kubernetes with ML-driven forecasting."
authors = ["VisageDvachevsky <mr.echxo@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "k8s_ml_predictive_autoscaling", from = "src" }
]
keywords = ["kubernetes", "prometheus", "autoscaling", "ml", "fastapi"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
prometheus-client = "^0.20.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
PyYAML = "^6.0.1"
pandas = "^2.2.0"
numpy = "^1.26.0"
scikit-learn = "^1.4.0"
joblib = "^1.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^4.1.0"
black = { extras = ["jupyter"], version = "^24.4.0" }
flake8 = "^7.0.0"
mypy = "^1.10.0"
isort = "^5.13.0"
types-requests = "^2.32.0"
pandas-stubs = "^2.1.0.240807"
types-PyYAML = "^6.0.12.20240917"
locust = "^2.30.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = false
strict_optional = true
mypy_path = "src"
packages = ["k8s_ml_predictive_autoscaling"]

[[tool.mypy.overrides]]
module = ["joblib", "sklearn.*"]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["k8s_ml_predictive_autoscaling"]
